# fasofree-backend/src/modules/businesses/dto/update-business.dto.ts
@@ -1,0 +1,70 @@
+import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
+import {
+  IsString,
+  IsBoolean,
+  IsEnum,
+  IsOptional,
+  IsNumber,
+  IsObject,
+} from 'class-validator';
+import { BusinessCategory } from '../entities/business.entity';
+
+export class UpdateBusinessDto {
+  @ApiPropertyOptional({ description: 'Nom du commerce' })
+  @IsString()
+  @IsOptional()
+  name?: string;
+
+  @ApiPropertyOptional({ description: 'Adresse' })
+  @IsString()
+  @IsOptional()
+  address?: string;
+
+  @ApiPropertyOptional({ description: 'Téléphone' })
+  @IsString()
+  @IsOptional()
+  phone?: string;
+
+  @ApiPropertyOptional({
+    enum: BusinessCategory,
+    description: 'Catégorie du commerce',
+  })
+  @IsEnum(BusinessCategory)
+  @IsOptional()
+  category?: BusinessCategory;
+
+  @ApiPropertyOptional({ description: 'Activer la livraison' })
+  @IsBoolean()
+  @IsOptional()
+  enableDelivery?: boolean;
+
+  @ApiPropertyOptional({ description: 'Activer Click & Collect' })
+  @IsBoolean()
+  @IsOptional()
+  enablePickup?: boolean;
+
+  @ApiPropertyOptional({ description: 'Activer consommation sur place' })
+  @IsBoolean()
+  @IsOptional()
+  enableDineIn?: boolean;
+
+  @ApiPropertyOptional({ description: 'Utiliser ses propres livreurs' })
+  @IsBoolean()
+  @IsOptional()
+  hasOwnDrivers?: boolean;
+
+  @ApiPropertyOptional({ description: "Statut d'ouverture" })
+  @IsBoolean()
+  @IsOptional()
+  isOpen?: boolean;
+
+  @ApiPropertyOptional({ description: 'Latitude' })
+  @IsNumber()
+  @IsOptional()
+  latitude?: number;
+
+  @ApiPropertyOptional({ description: 'Longitude' })
+  @IsNumber()
+  @IsOptional()
+  longitude?: number;
+}
